--- a/frontend/src/locales/arb/translation.json
+++ b/frontend/src/locales/arb/translation.json
@@ -1,3 +1,82 @@
 {
-    "cart": "عربة التسوق"
+    "Go Back": "العودة",
+    "store": "متجر",
+    "Latest Products": "أحدث المنتجات",
+    "The-shop": "المتجر",
+    "contact": "اتصل",
+    "cart": "عربة التسوق",
+    "Profile": "الملف الشخصي",
+    "Logout": "تسجيل الخروج",
+    "Sign In": "تسجيل الدخول",
+    "menu": " القائمة",
+    "Orders": "الطلبيات",
+    "Users": "المستخدمون",
+    "Products": "المنتجات",
+    "العربية": "العربية",
+    "Search Products...": "البحث عن المنتجات...",
+    "Search": "بحث",
+    "Contact Us": "اتصل بنا",
+    "Your Name": "اسمك",
+    "Enter your name": "أدخل اسمك",
+    "Your Email": "بريدك الإلكتروني",
+    "Enter your email": "أدخل بريدك الإلكتروني",
+    "Your Message": "رسالتك",
+    "Enter your message": "أدخل رسالتك",
+    "Submit": "إرسال",
+    "Categories": "التصنيفات",
+    "Shopping Cart": "عربة التسوق",
+    "Your cart is empty": "عربتك فارغة",
+    "Check Out": "الدفع",
+    "SubTotal": "المجموع الفرعي",
+    "items": "العناصر",
+    "Proceed To Checkout": "الانتقال إلى الدفع",
+    "Email Adress": "عنوان البريد الإلكتروني",
+    "Enter Email...": "أدخل البريد الإلكتروني...",
+    "Password": "كلمة المرور",
+    "Enter Password...": "أدخل كلمة المرور...",
+    "Or": "أو",
+    "New Customer?": "زبون جديد؟",
+    "Register": "تسجيل",
+    "Sign Up": "التسجيل",
+    "Full Name": "الاسم الكامل",
+    "Enter Full name...": "أدخل الاسم الكامل...",
+    "Confirm Password": "تأكيد كلمة المرور",
+    "Reenter Password...": "أعد إدخال كلمة المرور...",
+    "Already have an Account?": "هل لديك حساب بالفعل؟",
+    "Log In": "تسجيل الدخول",
+    "Description": "الوصف",
+    "Price:": "السعر:",
+    "Status:": "الحالة:",
+    "In Stock": "متوفر",
+    "On Order -": "قيد الطلب -",
+    "View": "عرض",
+    "Out Of Stock": "غير متوفر",
+    "Qty": "الكمية",
+    "Add To Cart": "أضف إلى العربة",
+    "No Reviews yet": "لا توجد تقييمات بعد",
+    "All Reviews": "كل التقييمات",
+    "Write a Customer Review": "كتابة تقييم",
+    "select your rating": "اختر تقييمك",
+    "Enter a Comment": "أدخل تعليقًا",
+    "Login befor u can write": "الرجاء تسجيل الدخول لتتمكن من الكتابة",
+    "comment": "تعليق",
+    "poor": "ضعيف",
+    "fair": "مقبول",
+    "good": "جيد",
+    "very good": "جيد جدا",
+    "excellent": "ممتاز",
+    "Admin DashBoard": "لوحة تحكم المشرف",
+    "User Profile": "الملف الشخصي للمستخدم",
+    "Name": "الاسم",
+    "Enter a new name": "أدخل اسم جديد",
+    "Email": "البريد الإلكتروني",
+    "Enter a new email": "أدخل بريدًا إلكترونيًا جديدًا",
+    "Enter a new password": "أدخل كلمة مرور جديدة",
+    "Confirm password": "تأكيد كلمة المرور",
+    "Confirm your password": "تأكيد كلمة المرور الخاصة بك",
+    "Update": "تحديث",
+    "My Orders": "طلباتي",
+    "Details": "تفاصيل",
+    "paid": "مدفوع",
+    "delivered": "تم التوصيل"
 }
