--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -1,3 +1,83 @@
 {
-    "cart": "panier"
+    "Go Back": "Retourner",
+    "store": "magasin",
+    "Latest Products": "Derniers produits",
+    "The-shop": "La boutique",
+    "contact": "contact",
+    "cart": "panier",
+    "Profile": "Profil",
+    "Logout": "Déconnexion",
+    "Sign In": "Se connecter",
+    "menu": " menu",
+    "Orders": "Commandes",
+    "Users": "Utilisateurs",
+    "Products": "Produits",
+    "العربية":"arabic",
+    "Search Products...": "Rechercher des produits...",
+    "Search": "Rechercher",
+    "Contact Us": "Nous contacter",
+    "Your Name": "Votre nom",
+    "Enter your name": "Entrez votre nom",
+    "Your Email": "Votre email",
+    "Enter your email": "Entrez votre email",
+    "Your Message": "Votre message",
+    "Enter your message": "Entrez votre message",
+    "Submit": "Soumettre",
+    "Categories": "Catégories",
+    "Shopping Cart": "Panier d'achat",
+    "Your cart is empty": "Votre panier est vide",
+    "Check Out": "Passer à la caisse",
+    "SubTotal": "Sous-total",
+    "items": "articles",
+    "Proceed To Checkout": "Passer à la caisse",
+    "Email Adress": "Adresse e-mail",
+    "Enter Email...": "Entrez votre e-mail...",
+    "Password": "Mot de passe",
+    "Enter Password...": "Entrez votre mot de passe...",
+    "Or": "Ou",
+    "New Customer?": "Nouveau client ?",
+    "Register": "S'inscrire",
+    "Sign Up": "S'inscrire",
+    "Full Name": "Nom complet",
+    "Enter Full name...": "Entrez votre nom complet...",
+    "Confirm Password": "Confirmez le mot de passe",
+    "Reenter Password...": "Entrez à nouveau votre mot de passe...",
+    "Already have an Account?": "Vous avez déjà un compte ?",
+    "Log In": "Connexion",
+    "Description": "Description",
+    "Price:": "Prix :",
+    "Status:": "Statut :",
+    "In Stock": "En stock",
+    "On Order -": "En commande -",
+    "View": "Voir",
+    "Out Of Stock": "En rupture de stock",
+    "Qty": "Quantité",
+    "Add To Cart": "Ajouter au panier",
+    "No Reviews yet": "Aucun avis pour le moment",
+    "All Reviews": "Tous les avis",
+    "Write a Customer Review": "Écrire un avis client",
+    "select your rating": "Sélectionnez votre note",
+    "Enter a Comment": "Entrez un commentaire",
+    "Login befor u can write": "Connectez-vous avant de pouvoir écrire",
+    "comment": "commentaire",
+    "poor": "mauvais",
+    "fair": "acceptable",
+    "good": "bon",
+    "very good": "très bon",
+    "excellent": "excellent",
+    "Admin DashBoard": "Tableau de bord de l'administrateur",
+    "User Profile": "Profil de l'utilisateur",
+    "Name": "Nom",
+    "Enter a new name": "Entrez un nouveau nom",
+    "Email": "E-mail",
+    "Enter a new email": "Entrez un nouvel e-mail",
+    "Enter a new password": "Entrez un nouveau mot de passe",
+    "Confirm password": "Confirmez le mot de passe",
+    "Confirm your password": "Confirmez votre mot de passe",
+    "Update": "Mettre à jour",
+    "My Orders": "Mes commandes",
+    "Details": "Détails",
+    "paid": "Payé",
+    "delivered": "Livré"
+    
 }
